<resources>
    <string name="app_name">I Color My World</string>
    <string name="drag_image_btn">Go to Drag Image</string>
    <string name="back_to_main">Close</string>
    <string name="lap_load_btn_txt">Lap lod</string>
    <string name="can_load_btn_txt">Can lod</string>
    <string name="sob_load_btn_txt">Sob lod</string>
    <string name="load_btn">Load Img</string>

    <string name="load_img_btn"><![CDATA[Press to load image\nfrom gallery to start coloring]]> </string>
    <string name="load_canvas_btn"><![CDATA[Press to load clean canvas\nto freestyle draw]]></string>

    <string name="opcv_img_btn">OpenCV edge Functions</string>
    <string name="gallery_img">Loaded Image</string>
    <string name="pnt_btn">Click here to Color</string>
    <string name="pnt_opcv_btn">Go to OpenCV Paint</string>
    <string name="close_app">Close App</string>


    <string name="menu_btn">Menu</string>
    <string name="action_erase">Eraser</string>
    <string name="action_delete">delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_brush_size">Brush Size</string>
    <string name="action_brush">Brush</string>

    <string name="action_color">color</string>
    <string name="action_save">save</string>
    <string name="action_share">share</string>

    <string name="delete_drawing">Do you want to delete?</string>
    <string name="new_draw_warning"><![CDATA[If you select yes, the current work will be deleted.
    \n\nYou cannot undo this action.\nThis does not delete the gallery image]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="drag_mode_btn_true">User Zoom/Drag Mode</string>
    <string name="drag_mode_btn_false">Button Zoom/Drag Mode</string>

    <string name="zoom_in">Zoom</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="img_up">Move up</string>
    <string name="img_down">Move down</string>
    <string name="img_left">Move left</string>
    <string name="img_right">Move right</string>

    <string name="fill_btn">Fill</string>
    <string name="fill_off">Fill Off</string>
    <string name="fill_on">Fill On</string>
    <string name="color_btn">Press &amp; Hold to Color</string>
    <string name="color_off">Press &amp; Hold to Color</string>
    <string name="color_on">Press &amp; Hold to Color</string>

    <string name="black">color black</string>
    <string name="red">color red</string>
    <string name="blue">color blue</string>
    <string name="green">color green</string>
    <string name="yellow">color yellow</string>

    <string name="loading">Your Image Will Load Shortly...</string>

    <string name="color_bar_select">to select color</string>
</resources>
