<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.mooooood.functforapp.OpCVImage_using">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/sobel_load_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/can_load_btn"
            android:text="@string/sob_load_btn_txt" />

        <Button
            android:id="@+id/can_load_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/lap_load_btn"
            android:text="@string/can_load_btn_txt" />

        <Button
            android:id="@+id/lap_load_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/lap_load_btn_txt" />

        <Button
            android:id="@+id/img_to_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="backToMain"
            android:text="@string/back_to_main" />

        <ImageView
            android:id="@+id/loaded_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/gallery_img" />

        <ImageButton
            android:id="@+id/zoom_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lap_load_btn"
            android:contentDescription="@string/zoom_in"
            android:onClick="zoomIn"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_zoom_in_black_24dp" />

        <ImageButton
            android:id="@+id/zoom_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zoom_in_btn"
            android:contentDescription="@string/zoom_out"
            android:onClick="zoomOut"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_zoom_out_black_24dp" />

        <ImageButton
            android:id="@+id/img_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lap_load_btn"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/img_up"
            android:onClick="imageUp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_arrow_upward_black_24dp" />

        <ImageButton
            android:id="@+id/img_down_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_up_btn"
            android:contentDescription="@string/img_down"
            android:onClick="imageDown"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_arrow_downward_black_24dp" />

        <ImageButton
            android:id="@+id/img_left_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_down_btn"
            android:contentDescription="@string/img_left"
            android:onClick="imageLeft"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <ImageButton
            android:id="@+id/img_right_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_left_btn"
            android:contentDescription="@string/img_right"
            android:onClick="imageRight"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

        <Button
            android:id="@+id/drag_mode_switch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="dragMode"
            android:text="@string/drag_mode_btn_true" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>